dist/1.0/bin/sample/retrieveUnpackaged/objects/Provisioning_Plan_Task_Attribute__c.object
<CustomObject>
    <description>Holds dependency definition between Provisioning Plan Task and Attribute that is required to close such Task</description>
    <fields>
        <fullName>Attribute_Link__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+ MandatoryAttribute__c , MandatoryAttribute__r.Name+IF(ISBLANK( MandatoryAttribute__r.Label_Eng__c ),&apos;&apos;,&apos; - &apos;+ MandatoryAttribute__r.Label_Eng__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <formula>MandatoryAttribute__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MandatoryAttribute__c</fullName>
        <label>Mandatory Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Provisioning Plan Task Attributes</relationshipLabel>
        <relationshipName>Provisioning_Plan_Task_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan_Task__c</fullName>
        <label>Provisioning Plan Task</label>
        <referenceTo>Provisioning_Plan_Task__c</referenceTo>
        <relationshipLabel>Provisioning Plan Task Attributes</relationshipLabel>
        <relationshipName>Provisioning_Plan_Task_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan__c</fullName>
        <formula>Provisioning_Plan_Task__r.Provisioning_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provisioning Plan</label>
        <type>Text</type>
    </fields>
    <label>Provisioning Plan Task Attribute</label>
    <nameField>
        <displayFormat>PPTA{000000000}</displayFormat>
        <label>Provisioning Plan Task Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Plan Task Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandatory_Attributes_For_Technical_Tasks</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;Update of Billing Products&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;Billing Account Creation&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;IP Unregistration&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;IP Activation&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;Phone Number Release&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;Phone Number Activation&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;Automatic Provisioning (ST)&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;Automatic Provisioning&apos;),ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c ,&apos;Update of CSR Database&apos;))</errorConditionFormula>
        <errorMessage>Mandatory Attributes can be only required for manual Provisioning Plan Tasks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Technical_and_Active_attributes_only</fullName>
        <active>true</active>
        <errorConditionFormula>OR(MandatoryAttribute__r.Active__c != True, MandatoryAttribute__r.Technical__c != True)</errorConditionFormula>
        <errorMessage>Only &apos;Active&apos; and &apos;Technical&apos; Attributes can be required for manual Provisioning Plan Tasks.</errorMessage>
    </validationRules>
</CustomObject>